crates/swc_ecma_parser/tests/test262-error-references/fail/f6cc48c72caf2e32.js.stderr
error: Invalid left-hand side in 'for...in' statement
 --> $DIR/tests/test262-parser/fail/f6cc48c72caf2e32.js:1:3
  |
1 | ++1
  |   ^

